--- a/app/src/main/res/layout/content_patient_nav.xml
+++ b/app/src/main/res/layout/content_patient_nav.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/content_patient_nav"
+    android:background="@drawable/d_background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="system.faisalshakiba.com.hellodoctor.commonactivities.PatientNavActivity"
     tools:showIn="@layout/app_bar_patient_nav">
