--- a/app/src/main/res/layout/patient_dashboard.xml
+++ b/app/src/main/res/layout/patient_dashboard.xml
@@ -3,13 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/pat_dashboard"
-    android:padding="20dp"
-    android:background="@drawable/d_background">
+
+    android:background="@drawable/table"
+    >
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="20dp"
         android:orientation="vertical">
 
 
