--- a/app/src/main/res/layout/services.xml
+++ b/app/src/main/res/layout/services.xml
@@ -3,12 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/layout_service"
-    android:background="@drawable/d_background"
+   android:background="@drawable/table"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="20dp"
         android:orientation="vertical">
 
         <LinearLayout
