--- a/app/src/main/res/layout/doctors_appointment.xml
+++ b/app/src/main/res/layout/doctors_appointment.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/d_background">
+    android:id="@+id/fragment_doctors_appoinmentn"
+    android:background="@drawable/table">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +23,7 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/btn_mental"
                     android:layout_marginTop="100dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -45,7 +46,7 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/button9"
+                    android:id="@+id/btn_physical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="100dp"
