--- a/app/src/main/res/layout/mental_health.xml
+++ b/app/src/main/res/layout/mental_health.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_mental_health"
-    android:background="@drawable/d_background">
+    android:background="@drawable/table">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,24 +17,29 @@
             android:orientation="vertical"
             >
 
-            <Spinner
-                android:id="@+id/doc_spinner"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"/>
+                android:layout_height="60dp"
+                android:background="@drawable/table"
+                android:layout_marginTop="40dp"
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <Spinner
+                    android:id="@+id/mental_spinner"
+                    android:layout_width="match_parent"
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
+                    android:layout_height="50dp"
+                    />
+            </LinearLayout>
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:id="@+id/mental_listview"
+                android:layout_weight="1" />
+
         </LinearLayout>
+
+
 
     </LinearLayout>
 </RelativeLayout>
