--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -61,7 +61,7 @@
             <!--</RadioGroup>-->
 
             <EditText
-                android:id="@+id/txt_username"
+                android:id="@+id/txt_username4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -70,7 +70,7 @@
                android:hint="username" />
 
             <EditText
-                android:id="@+id/txt_password"
+                android:id="@+id/txt_password4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
